# claude-snatch

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  FUNCTIONAL_REQUIREMENTS.md  Justfile  LICENSE  QUALITY.md  README.md  RELEASING.md  SECURITY.md  deny.toml  examples.md  install.sh  prompt.md
.github/: dependabot.yml
.github/workflows/: ci.yml
benches/: parser_bench.rs
docs/: CONTRIBUTING.md  analysis-extraction.md  architecture.md  cli-cheatsheet.md  compaction-archaeology.md  configuration.md  decision-mining-features.md  examples.md  export-formats.md  issues.md  multi-provider-design.md  relationship-tracking-workitems.md  test-corpus.md  tui-guide.md
homebrew/: claude-snatch.rb
skills/session-audit/: SKILL.md
skills/session-debrief/: SKILL.md
src/: api.rs  error.rs  file_index.rs  lib.rs  main.rs  message_tags.rs  tags.rs
src/analysis/: chunking.rs  conflict_detection.rs  decision_detection.rs  digest.rs  doctor.rs  event_context.rs  extraction.rs  file_evolution.rs  filters.rs  lessons.rs  mod.rs  monitor.rs  monitor_state.rs  priorities.rs  project_health.rs  project_lessons.rs  retrospective.rs  search.rs  subagents.rs  threading.rs  timeline.rs  usage.rs
src/analytics/: history.rs  mod.rs
src/async_io/: mod.rs
src/cache/: mod.rs
src/cli/: mod.rs
src/cli/commands/: cache.rs  chain.rs  chunks.rs  cleanup.rs  code.rs  completions.rs  config.rs  conflicts.rs  context.rs  decisions.rs  detect.rs  diff.rs  digest.rs  doctor.rs  export.rs  extract.rs  file_evolution.rs  file_history.rs  goals.rs  grab.rs  health.rs  helpers.rs  index.rs  info.rs  lessons.rs  list.rs  messages.rs  mod.rs  monitor.rs  notes.rs  pick.rs  priorities.rs  project_lessons.rs  prompts.rs  providers.rs  quickstart.rs  recent.rs  recover.rs  retrospective.rs  search.rs  (+9 more)
src/config/: mod.rs
src/decisions/: mod.rs
src/discovery/: chain.rs  hierarchy.rs  mod.rs  paths.rs  project.rs  session.rs  session_index.rs  streaming.rs
src/export/: csv.rs  html.rs  json.rs  markdown.rs  mod.rs  otel.rs  schema.rs  sqlite.rs  text.rs  tool_render.rs  xml.rs
src/extraction/: backup.rs  commands.rs  mcp.rs  mod.rs  rules.rs  settings.rs
src/git/: mod.rs
src/goals/: mod.rs
src/index/: build.rs  mod.rs  provider.rs  query.rs
src/mcp_server/: helpers.rs  mod.rs  types.rs
src/model/: content.rs  message.rs  metadata.rs  mod.rs  schema.rs  serde_str.rs  tools.rs  usage.rs
src/notes/: mod.rs
src/parser/: mod.rs  streaming.rs
src/provider/: claude_code.rs  codex.rs  codex_normalize.rs  fake.rs  mod.rs  project.rs  registry.rs  tests.rs
src/reconstruction/: mod.rs  thread.rs  tree.rs
src/tui/: app.rs  components.rs  events.rs  highlight.rs  image.rs  mod.rs  state.rs  theme.rs
src/util/: mod.rs
tests/: cli_integration_tests.rs  corpus_coverage.rs  integration_tests.rs  proptest_parser.proptest-regressions  proptest_parser.rs  snapshot_exports.rs  tui_integration.rs
tests/fixtures/: PROVENANCE.md  branching_session.jsonl  compaction_session.jsonl  content_blocks_session.jsonl  forward_compat_session.jsonl  malformed_session.jsonl  redaction_session.jsonl  rich_entries_session.jsonl  simple_session.jsonl  system_session.jsonl  thinking_session.jsonl  tool_render_session.jsonl
tests/fixtures/codex/: envelope_session.jsonl  envelope_session.jsonl.zst  legacy_session.jsonl  manifest.json  window28.bin.zst
tests/fixtures/subagent_session/: c0ffee00-1111-2222-3333-444455556666.jsonl
tests/fixtures/subagent_session/c0ffee00-1111-2222-3333-444455556666/subagents/: agent-1111111111111111.jsonl  agent-1111111111111111.meta.json  agent-2222222222222222.jsonl  agent-2222222222222222.meta.json  agent-3333333333333333.jsonl  agent-3333333333333333.meta.json
tests/generators/: mod.rs
tests/snapshots/: integration_tests__snapshot_tests__branching_session_main_thread.snap  integration_tests__snapshot_tests__simple_session_json.snap  integration_tests__snapshot_tests__simple_session_markdown.snap  integration_tests__snapshot_tests__thinking_session_markdown.snap  snapshot_exports__csv_simple.snap  snapshot_exports__json_branching.snap  snapshot_exports__json_simple.snap  snapshot_exports__json_system.snap  snapshot_exports__json_thinking.snap  snapshot_exports__markdown_simple.snap  snapshot_exports__markdown_system.snap  snapshot_exports__markdown_thinking.snap  snapshot_exports__text_branching.snap  snapshot_exports__text_simple.snap  snapshot_exports__text_thinking.snap  snapshot_exports__xml_simple.snap  snapshot_exports__xml_thinking.snap
