[package]
name = "claude-snatch"
version = "0.1.0"
edition = "2021"
rust-version = "1.75.0"
authors = ["claude-snatch contributors"]
description = "High-performance CLI/TUI tool for extracting and analyzing Claude Code conversation logs"
license = "MIT"
repository = "https://github.com/claude-snatch/claude-snatch"
keywords = ["claude", "code", "jsonl", "extraction", "cli", "tui"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[dependencies]
# CLI Framework
clap = { version = "4.5", features = ["derive", "env", "string", "wrap_help"] }
clap_complete = "4.5"

# TUI Framework
ratatui = { version = "0.29", features = ["all-widgets"] }
crossterm = { version = "0.28", features = ["event-stream"] }

# Async Runtime
tokio = { version = "1.41", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3"

# Serialization/Deserialization
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1.0", features = ["preserve_order", "raw_value"] }

# Error Handling
thiserror = "2.0"
color-eyre = "0.6"
eyre = "0.6"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Time/Date handling
chrono = { version = "0.4", features = ["serde"] }
humantime = "2.1"

# File system utilities
walkdir = "2.5"
dirs = "5.0"
notify = { version = "7.0", features = ["serde"] }
directories = "5.0"
tempfile = "3.14"

# Clipboard
arboard = "3.4"

# Search/Filtering
regex = "1.11"
globset = "0.4"
tantivy = "0.22"

# Terminal utilities
console = "0.15"
indicatif = { version = "0.17", features = ["tokio"] }
syntect = { version = "5.2", default-features = false, features = ["default-fancy"] }

# Data structures
indexmap = { version = "2.6", features = ["serde"] }
uuid = { version = "1.11", features = ["serde", "v4"] }
semver = { version = "1.0", features = ["serde"] }

# Configuration
toml = "0.8"
config = "0.14"

# Utilities
once_cell = "1.20"
parking_lot = "0.12"
rayon = "1.10"
bytes = "1.8"
base64 = "0.22"
percent-encoding = "2.3"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

[dev-dependencies]
# Testing
pretty_assertions = "1.4"
insta = { version = "1.41", features = ["json", "yaml"] }
proptest = "1.5"
criterion = { version = "0.5", features = ["async_tokio"] }
tempfile = "3.14"
rstest = "0.23"
tokio-test = "0.4"

[profile.release]
lto = "thin"
opt-level = 3
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[[bin]]
name = "snatch"
path = "src/main.rs"

# Benchmarks (optional, create file to enable)
# [[bench]]
# name = "parser_bench"
# harness = false

[features]
default = []
tui = []
tracing = []
mmap = []  # Memory-mapped file parsing for very large JSONL files

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
# Allow some pedantic lints that are too strict
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
